<resources>
    <string name="app_name">Kids Drawing App</string>
    <string name="todo">TODO</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="brush">Brush</string>
    <string name="_11">11</string>
    <string name="btn_for_gallery">btn for Gallery</string>
    <string name="btn_for_brush_selection">btn for brush selection</string>
    <string name="btn_for_undo" />
</resources>